# TicketAlertBot

./: .gitignore  README.md  files_utils.py  http_utils.py  main.py  pyproject.toml  selenium_utils.py  telegram_utils.py
config/: config.py
handlers/: routes.py
src/config/: config.py
src/handlers/: routes.py
src/ticketalertbot/: main.py
src/utils/: http_utils.py  selenium_utils.py  telegram_utils.py
utils/: files_utils.py  selenium_utils.py
